# ferratomic

./: .gitignore  AGENTS.md  Cargo.toml  GOALS.md  QUICKSTART.md  README.md  clippy.toml  deny.toml  kani-results.txt  rust-toolchain.toml  rustfmt.toml
.beads/: .gitignore  issues.jsonl
.beads/.br_history/: issues.20260330_045507.jsonl  issues.20260330_181038_895283261.jsonl  issues.20260330_181041_621850156.jsonl  issues.20260330_181507_862433178.jsonl  issues.20260330_181934_599312355.jsonl  issues.20260330_182022_119853090.jsonl  issues.20260330_182038_266137618.jsonl  issues.20260330_182044_807801091.jsonl  issues.20260330_182051_529505208.jsonl  issues.20260330_182100_285215397.jsonl  issues.20260330_182127_907248832.jsonl  issues.20260330_182250_942355298.jsonl  issues.20260330_182301_020137535.jsonl  issues.20260330_182332_904690022.jsonl  issues.20260330_183650_929855052.jsonl  issues.20260330_183719_296877209.jsonl  issues.20260330_183741_825589665.jsonl  (+13 more)
.cass/: playbook.yaml
.github/workflows/: ci.yml
experiments/index_scaling/: Cargo.toml
experiments/index_scaling/results/: 2026-04-08-1m-10m.json  2026-04-08-50m-100m.json
experiments/index_scaling/src/: main.rs
ferratom/: Cargo.toml
ferratom-clock/: Cargo.toml
ferratom-clock/src/: frontier.rs  lib.rs  txid.rs
ferratom/src/: bundle.rs  clock.rs  datom.rs  error.rs  filter.rs  lib.rs  provenance.rs  schema.rs  signing.rs  traits.rs  wire.rs
ferratom/src/clock/: frontier.rs  mod.rs  txid.rs
ferratom/src/datom/: entity.rs  mod.rs  value.rs
ferratomic-checkpoint/: Cargo.toml
ferratomic-checkpoint/src/: io.rs  lib.rs  mmap.rs  tests.rs  v3.rs  v4.rs  v4_read.rs
ferratomic-core/: Cargo.toml
ferratomic-core/src/: anti_entropy.rs  backpressure.rs  checkpoint.rs  db.rs  db.rs.bak  indexes.rs  lib.rs  merge.rs  mmap.rs  mph.rs  observer.rs  perm_layout.rs  positional.rs  schema_evolution.rs  signing.rs  snapshot.rs  storage.rs  store.rs  store.rs.bak  topology.rs  transport.rs  wal.rs  writer.rs
ferratomic-core/src/checkpoint/: tests.rs  v3.rs
ferratomic-core/src/db/: mod.rs  observe.rs  recover.rs  tests.rs  transact.rs
ferratomic-core/src/prolly/: boundary.rs  build.rs  chunk.rs  diff.rs  mod.rs  read.rs  snapshot.rs  transfer.rs
ferratomic-core/src/storage/: backend.rs  mod.rs  recovery.rs
ferratomic-core/src/store/: apply.rs  checkpoint.rs  iter.rs  merge.rs  mod.rs  query.rs  tests.rs
ferratomic-core/src/wal/: mod.rs  recover.rs  writer.rs
ferratomic-core/src/writer/: commit.rs  mod.rs  tests.rs  validate.rs
ferratomic-datalog/: Cargo.toml
ferratomic-datalog/src/: evaluator.rs  lib.rs  parser.rs  planner.rs
ferratomic-index/: Cargo.toml
ferratomic-index/src/: backend.rs  indexes.rs  keys.rs  lib.rs
ferratomic-positional/: Cargo.toml
ferratomic-positional/src/: adjacency.rs  ans.rs  bloom.rs  chunk_fingerprints.rs  codec.rs  columns.rs  entity_rle.rs  fingerprint.rs  lib.rs  live.rs  merge.rs  mph.rs  perm.rs  perm_accessors.rs  search.rs  store.rs  succinct.rs  tests.rs  wavelet.rs
ferratomic-storage/: Cargo.toml
ferratomic-storage/src/: backend.rs  lib.rs
ferratomic-store/: Cargo.toml
ferratomic-store/src/: apply.rs  checkpoint.rs  iter.rs  lib.rs  merge.rs  query.rs  repr.rs  schema_evolution.rs  sketch.rs  store.rs  tests.rs
ferratomic-tx/: Cargo.toml
ferratomic-tx/src/: commit.rs  lib.rs  tests.rs  validate.rs
ferratomic-verify/: Cargo.toml
ferratomic-verify/benches/: cold_start.rs  common.rs  index_backend.rs  merge_throughput.rs  prolly_ops.rs  prolly_scale.rs  read_latency.rs  snapshot_creation.rs  write_amplification.rs
ferratomic-verify/integration/: test_bootstrap.rs  test_crdt.rs  test_federation.rs  test_federation_e2e.rs  test_recovery.rs  test_schema.rs  test_snapshot.rs  test_thresholds.rs  test_wavelet_lib.rs
ferratomic-verify/kani/: anti_entropy.rs  backpressure_bounds.rs  clock.rs  codec_conformance.rs  crdt_laws.rs  durability.rs  error_exhaustiveness.rs  live_reconstruction.rs  live_resolution.rs  mod.rs  schema_identity.rs  sharding.rs  store_views.rs  topology.rs
ferratomic-verify/lean/: Ferratomic.lean  lake-manifest.json  lakefile.lean
ferratomic-verify/lean/Ferratomic/: Concurrency.lean  Decisions.lean  Federation.lean  Performance.lean  ProllyTree.lean  ProllyTreeCodec.lean  ProllyTreeDatomPair.lean  ProllyTreeDiff.lean  ProllyTreeFoundation.lean  ProllyTreeHistoryIndep.lean  ProllyTreeSnapshot.lean  ProllyTreeSubstrate.lean  ProllyTreeTransfer.lean  Refinement.lean  Store.lean  VKN.lean
ferratomic-verify/proptest/: append_only_properties.rs  clock_properties.rs  conformance.rs  crdt_properties.proptest-regressions  crdt_properties.rs  durability_properties.rs  fault_recovery_properties.proptest-regressions  fault_recovery_properties.rs  federation_properties.rs  index_properties.rs  isomorphism_properties.rs  positional_properties.rs  prolly_properties.rs  refinement.rs  schema_properties.rs  wal_properties.proptest-regressions  wal_properties.rs
ferratomic-verify/src/: bench_helpers.rs  confidence.rs  fault_injection.rs  generators.rs  invariant_catalog.rs  isomorphism.rs  lib.rs
ferratomic-verify/stateright/: backpressure_model.rs  crash_recovery_model.rs  crdt_model.rs  hlc_model.rs  mod.rs  schema_validation_model.rs  snapshot_isolation_model.rs  transaction_atomicity_model.rs  write_linearizability_model.rs
ferratomic-verify/tests/: test_bug_bd_1kh_kani_public_access.rs  test_bug_bd_8e3_kani_api_surface.rs
ferratomic-wal/: Cargo.toml
ferratomic-wal/src/: lib.rs
ferratomic-wal/src/wal/: dedup_bloom.rs  mod.rs  recover.rs  writer.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_canonical_bytes.rs  fuzz_checkpoint_bytes.rs  fuzz_codec_payload.rs  fuzz_merge_commutativity.rs  fuzz_nonnan_float.rs  fuzz_wal_frames.rs  fuzz_wire_datom.rs
scripts/: pre-commit
spec/: 00-preamble.md  01-core-invariants.md  02-concurrency.md  03-performance.md  04-decisions-and-constraints.md  05-federation.md  06-prolly-tree.md  07-refinement.md  08-verification-infrastructure.md  09-performance-architecture.md  README.md
(+90 files in other folders)
