[workspace]
members = [
    "ferratom-clock",
    "ferratom",
    "ferratomic-tx",
    "ferratomic-storage",
    "ferratomic-wal",
    "ferratomic-core",
    "ferratomic-datalog",
    "ferratomic-verify",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wvandaal/ferratomic"
description = "Ferratomic: A formally verified, distributed embedded datom database engine"

[workspace.dependencies]
# Core
im = "15"
arc-swap = "1"
blake3 = "1"
ordered-float = { version = "4", features = ["serde"] }
bitvec = { version = "1", features = ["serde"] }
bincode = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
zstd = "0.13"

# Async: asupersync is the primary runtime (ADR-FERR-002)
# Pinned 2026-03-30 for reproducible builds.
asupersync = { git = "https://github.com/Dicklesworthstone/asupersync.git", rev = "27da8095395a230044d7ce603665778ddf46fe00" }
# Tokio: compat only — confined to asupersync-tokio-compat adapter modules
tokio = { version = "1", features = ["full"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Verification
stateright = "0.31"
# kani-verifier = "0.50"  # Installed separately

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
