[package]
name = "ferratom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types for Ferratomic: Datom, EntityId, Attribute, Value, TxId, Schema"

# ZERO project-internal dependencies — this is a leaf crate.
# All types are pure algebraic definitions.
# Algebraic role: FREE objects (no imposed structure).

[features]
# Enables EntityId::from_bytes() and AgentId::from_seed() for testing.
# Production code must use EntityId::from_content() (INV-FERR-012).
test-utils = []

[dependencies]
blake3 = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
