[package]
name = "ferratomic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Storage and concurrency engine for Ferratomic: Store, MVCC snapshots, WAL, observers"

# Algebraic role: ALGEBRAS (operations over types from ferratom)
[dependencies]
ferratom = { path = "../ferratom" }
im = { workspace = true }
arc-swap = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
asupersync = { workspace = true }
# tokio: optional, for asupersync-tokio-compat adapter modules only
tokio = { workspace = true, optional = true }

[features]
## Enable release-mode index bijection sampling (INV-FERR-005).
## When active, every 100th transaction verifies 4-index cardinality match.
release_bijection_check = []

[dev-dependencies]
ferratom = { path = "../ferratom", features = ["test-utils"] }
proptest = { workspace = true }
tempfile = "3"
ordered-float = { workspace = true }
