[package]
name = "ferratomic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Storage and concurrency engine for Ferratomic: Store, MVCC snapshots, WAL, observers"

# Algebraic role: ALGEBRAS (operations over types from ferratom)
[dependencies]
ferratom = { path = "../ferratom" }
im = { workspace = true }
arc-swap = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true }
serde = { workspace = true }
asupersync = { workspace = true }
# tokio: optional, for asupersync-tokio-compat adapter modules only
tokio = { workspace = true, optional = true }

[features]
## Enable release-mode index bijection sampling (INV-FERR-005).
## When active, every 100th transaction verifies 4-index cardinality match.
release_bijection_check = []
## HI-005: Expose commit_unchecked and other testing-only APIs.
## Production builds must NOT enable this feature.
test-utils = []

[dev-dependencies]
ferratom = { path = "../ferratom", features = ["test-utils"] }
proptest = { workspace = true }
tempfile = "3"
ordered-float = { workspace = true }
