[package]
name = "ferratomic-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Storage and concurrency engine for Ferratomic: Store, MVCC snapshots, WAL, observers"

# Algebraic role: ALGEBRAS (operations over types from ferratom)
[dependencies]
ferratom = { path = "../ferratom" }
ferratomic-tx = { path = "../ferratomic-tx" }
ferratomic-storage = { path = "../ferratomic-storage" }
ferratomic-wal = { path = "../ferratomic-wal" }
ferratomic-index = { path = "../ferratomic-index" }
ferratomic-positional = { path = "../ferratomic-positional" }
ferratomic-checkpoint = { path = "../ferratomic-checkpoint" }
ferratomic-store = { path = "../ferratomic-store" }
im = { workspace = true }
arc-swap = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true }
rayon = "1"
serde = { workspace = true }
asupersync = { workspace = true }
# tokio: optional, for asupersync-tokio-compat adapter modules only
tokio = { workspace = true, optional = true }
# mmap zero-copy cold start (INV-FERR-070, bd-ta8c)
memmap2 = { version = "0.9", optional = true }
rkyv = { version = "0.8", optional = true, features = ["bytecheck"] }

[features]
## Enable release-mode index bijection sampling (INV-FERR-005).
## When active, every 100th transaction verifies 4-index cardinality match.
release_bijection_check = []
## HI-005: Expose commit_unchecked and other testing-only APIs.
## Production builds must NOT enable this feature.
test-utils = ["ferratomic-tx/test-utils", "ferratomic-positional/test-utils", "ferratomic-store/test-utils"]
## ALIEN-S1: mmap zero-copy cold start (INV-FERR-070, bd-ta8c).
## Enables MappedStore, mmap_cold_start, promote_to_positional.
mmap = ["dep:memmap2", "dep:rkyv", "ferratomic-checkpoint/mmap"]

[dev-dependencies]
ferratom = { path = "../ferratom", features = ["test-utils"] }
ferratomic-tx = { path = "../ferratomic-tx", features = ["test-utils"] }
ferratomic-store = { path = "../ferratomic-store", features = ["test-utils"] }
proptest = { workspace = true }
tempfile = "3"
ordered-float = { workspace = true }
