[package]
name = "ferratomic-positional"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Positional content-addressed store for Ferratomic: contiguous arrays, LIVE bitvector, CHD, Bloom"

[dependencies]
ferratom = { path = "../ferratom" }
ferratomic-index = { path = "../ferratomic-index" }
bitvec = { workspace = true }
blake3 = { workspace = true }
rayon = "1"
roaring = "0.11"

[features]
test-utils = []

[dev-dependencies]
ferratom = { path = "../ferratom", features = ["test-utils"] }
ferratomic-verify = { path = "../ferratomic-verify" }
proptest = { workspace = true }
