[package]
name = "ferratomic-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Formal verification suite: Lean 4 proofs, Stateright models, Kani harnesses, proptest"

[dependencies]
ferratom = { path = "../ferratom", features = ["test-utils"] }
ferratomic-core = { path = "../ferratomic-core", features = ["test-utils"] }
proptest = { workspace = true }
stateright = { workspace = true }
ordered-float = { workspace = true }
im = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
rand = "0.8"
serde_json = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }

# --- Property-based test suites (proptest/) ---

[[test]]
name = "proptest_crdt"
path = "proptest/crdt_properties.rs"

[[test]]
name = "proptest_index"
path = "proptest/index_properties.rs"

[[test]]
name = "proptest_wal"
path = "proptest/wal_properties.rs"

[[test]]
name = "proptest_schema"
path = "proptest/schema_properties.rs"

[[test]]
name = "proptest_durability"
path = "proptest/durability_properties.rs"

[[test]]
name = "proptest_clock"
path = "proptest/clock_properties.rs"

[[test]]
name = "proptest_append_only"
path = "proptest/append_only_properties.rs"

[[test]]
name = "proptest_fault_recovery"
path = "proptest/fault_recovery_properties.rs"

[[test]]
name = "proptest_positional"
path = "proptest/positional_properties.rs"

[[test]]
name = "proptest_conformance"
path = "proptest/conformance.rs"

# --- Integration test suites (integration/) ---

[[test]]
name = "integration_crdt"
path = "integration/test_crdt.rs"

[[test]]
name = "integration_snapshot"
path = "integration/test_snapshot.rs"

[[test]]
name = "integration_recovery"
path = "integration/test_recovery.rs"

[[test]]
name = "integration_schema"
path = "integration/test_schema.rs"

[[test]]
name = "integration_thresholds"
path = "integration/test_thresholds.rs"

# --- Kani bounded model checking harnesses (kani/) ---

[[test]]
name = "kani_harnesses"
path = "kani/mod.rs"

# --- Criterion benchmark suites (benches/) ---

[[bench]]
name = "cold_start"
path = "benches/cold_start.rs"
harness = false

[[bench]]
name = "merge_throughput"
path = "benches/merge_throughput.rs"
harness = false

[[bench]]
name = "read_latency"
path = "benches/read_latency.rs"
harness = false

[[bench]]
name = "snapshot_creation"
path = "benches/snapshot_creation.rs"
harness = false

[[bench]]
name = "write_amplification"
path = "benches/write_amplification.rs"
harness = false

[[bench]]
name = "index_backend"
path = "benches/index_backend.rs"
harness = false
