[package]
name = "ferratomic-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Formal verification suite: Lean 4 proofs, Stateright models, Kani harnesses, proptest"

[dependencies]
ferratom = { path = "../ferratom", features = ["test-utils"] }
ferratomic-db = { path = "../ferratomic-core", features = ["test-utils"] }
ferratomic-positional = { path = "../ferratomic-positional", features = ["test-utils"] }
proptest = { workspace = true }
stateright = { workspace = true }
ed25519-dalek = { workspace = true }
ordered-float = { workspace = true }
im = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
criterion = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
rand = "0.8"
serde_json = { workspace = true }
qwt = "0.3"
sucds = "0.8"
vers-vecs = "1.9"

[features]
# Tiered testing per spec/09 §Verification Tier Structure:
#
# - Default (unflagged): correctness tests at small scale (1K-25K).
#   Run on every commit. Total runtime budget: < 5 min.
#
# - `scale-tests`: 200K-scale threshold tests for INV-FERR-026/027/028.
#   These exercise the im::OrdMap representation at the upper bound of
#   Phase 4a's measured envelope. Release-mode runs take 1-12 hours
#   depending on hardware (im::OrdMap construction at 200K is the
#   dominant cost — see spec/09 §Performance Audit).
#
#   Run manually before tagging:
#     cargo test --release -p ferratomic-verify --features scale-tests \
#       --test integration_thresholds
#
#   Do NOT run in CI per-commit. Use scheduled (nightly/weekly) jobs.
scale-tests = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(kani)'] }

# --- Property-based test suites (proptest/) ---
#
# bd-n58h: Regression seed status (2 of 12 modules have seeds):
#
#   HAS seeds:  crdt_properties, wal_properties
#   NO seeds:   index_properties, schema_properties, durability_properties,
#               clock_properties, append_only_properties, fault_recovery_properties,
#               positional_properties, conformance, isomorphism_properties,
#               refinement
#
# Absence of seeds means no regressions have been discovered in those modules
# yet. Seeds are generated automatically by proptest when a failure is found
# and shrunk. Do NOT create fake seed files — they would be meaningless.

[[test]]
name = "proptest_crdt"
path = "proptest/crdt_properties.rs"

[[test]]
name = "proptest_index"
path = "proptest/index_properties.rs"

[[test]]
name = "proptest_wal"
path = "proptest/wal_properties.rs"

[[test]]
name = "proptest_schema"
path = "proptest/schema_properties.rs"

[[test]]
name = "proptest_durability"
path = "proptest/durability_properties.rs"

[[test]]
name = "proptest_clock"
path = "proptest/clock_properties.rs"

[[test]]
name = "proptest_append_only"
path = "proptest/append_only_properties.rs"

[[test]]
name = "proptest_fault_recovery"
path = "proptest/fault_recovery_properties.rs"

[[test]]
name = "proptest_positional"
path = "proptest/positional_properties.rs"

[[test]]
name = "proptest_conformance"
path = "proptest/conformance.rs"

[[test]]
name = "proptest_isomorphism"
path = "proptest/isomorphism_properties.rs"

[[test]]
name = "proptest_refinement"
path = "proptest/refinement.rs"

[[test]]
name = "proptest_federation"
path = "proptest/federation_properties.rs"

[[test]]
name = "proptest_prolly"
path = "proptest/prolly_properties.rs"

# --- Integration test suites (integration/) ---

[[test]]
name = "integration_crdt"
path = "integration/test_crdt.rs"

[[test]]
name = "integration_snapshot"
path = "integration/test_snapshot.rs"

[[test]]
name = "integration_recovery"
path = "integration/test_recovery.rs"

[[test]]
name = "integration_schema"
path = "integration/test_schema.rs"

[[test]]
name = "integration_thresholds"
path = "integration/test_thresholds.rs"

[[test]]
name = "integration_federation"
path = "integration/test_federation.rs"

[[test]]
name = "integration_bootstrap"
path = "integration/test_bootstrap.rs"

[[test]]
name = "integration_federation_e2e"
path = "integration/test_federation_e2e.rs"

[[test]]
name = "integration_wavelet_lib"
path = "integration/test_wavelet_lib.rs"

# --- Kani bounded model checking harnesses (kani/) ---

[[test]]
name = "kani_harnesses"
path = "kani/mod.rs"

# --- Criterion benchmark suites (benches/) ---

[[bench]]
name = "prolly_ops"
path = "benches/prolly_ops.rs"
harness = false

[[bench]]
name = "cold_start"
path = "benches/cold_start.rs"
harness = false

[[bench]]
name = "merge_throughput"
path = "benches/merge_throughput.rs"
harness = false

[[bench]]
name = "read_latency"
path = "benches/read_latency.rs"
harness = false

[[bench]]
name = "snapshot_creation"
path = "benches/snapshot_creation.rs"
harness = false

[[bench]]
name = "write_amplification"
path = "benches/write_amplification.rs"
harness = false

[[bench]]
name = "index_backend"
path = "benches/index_backend.rs"
harness = false
